<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ShoeDetailFragment">


    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viemodels.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_label_shoe_name"
            style="@style/shoeDetailLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/tv_label_company_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/et_shoe_name"
            style="@style/inputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_shoe_name"
            android:text="@={shoeViewModel.shoeName}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/tv_label_company_name"
            style="@style/shoeDetailLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_company_name"
            app:layout_constraintBottom_toTopOf="@+id/tv_label_shoe_size"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_shoe_name" />

        <EditText
            android:id="@+id/et_company_name"
            style="@style/inputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_comapny_name"
            android:text="@={shoeViewModel.shoeCompany}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_company_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/tv_label_shoe_size"
            style="@style/shoeDetailLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/tv_description"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_company_name" />

        <EditText
            android:id="@+id/et_shoe_size"
            style="@style/inputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_shoe_size"
            android:text="@={shoeViewModel.shoeSize}"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/barrier" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/shoeDetailLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/label_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_shoe_size" />

        <EditText
            android:id="@+id/et_description"
            style="@style/inputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_description"
            android:text="@={shoeViewModel.shoeDescription}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/barrier" />


        <Button
            android:id="@+id/btn_cancel"
            style="@style/btnStyle"
            android:onClick="@{()->shoeViewModel.onCancelBtnClick()}"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btn_save"
            style="@style/btnStyle"
            android:layout_marginTop="16dp"
            android:onClick="@{()->shoeViewModel.onSaveBtnClick()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/et_description" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_label_shoe_name,tv_label_company_name,tv_description,tv_label_shoe_size"
            tools:layout_editor_absoluteX="411dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>