<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.InstructionsOnboardingFragment">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viemodels.ShoeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rewards"
            android:textAlignment="center"
            style="@style/onBoardingTitleStyle"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inst_sub_title"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_next"
            android:text="@string/get_started"
            style="@style/btnStyle"
            android:padding="@dimen/spaceNormal"
            android:layout_margin="@dimen/spaceLarge"
            android:onClick="@{()-> shoeViewModel.navigateToShoeListScreen()}"
            />


    </LinearLayout>

</layout>